# mylib

./: '  .gitignore
JavaScript/: helloworld.js  index.css  index.html  test.js
Makefile/: main.c
Makefile/include/: test01.h
Makefile/subdir/: test_subdir.c  test_subdir.h
Makefile/tests/: Makefile.test_find_lib
asm/: Makefile  common.h  hello.asm  hello_asm.asm  hello_asm.s  hello_c.c
asm/arm/: test_add.c  test_put_char.asm
asm/test_asm/: test_c.c
bat/tests/: test_file.bat
c/: Makefile  build.sh  clean.sh  head.h
c/algorithm/: CMakeLists.txt  bfs.c  common.h  dfs.c  heap.c  list.c  plan.md  queue.c  stack.c  tree.c  trie.c
c/bit/: Makefile
c/leetcode/: CMakeLists.txt  Makefile  common.c  common.h  leetcode_0001.c  leetcode_0002.c  leetcode_0003.c  leetcode_0004.c  leetcode_0005.c  leetcode_0006.c  leetcode_0007.c  leetcode_0008.c  leetcode_0009.c  leetcode_0011.c  leetcode_0012.c  leetcode_0013.c  leetcode_0014.c  leetcode_0015.c  leetcode_0016.c  leetcode_0017.c  leetcode_0018.c  leetcode_0019.c  leetcode_0020.c  leetcode_0021.c  leetcode_0022.c  leetcode_0023.c  leetcode_0024.c  leetcode_0026.c  leetcode_0027.c  leetcode_0028.c  leetcode_0029.c  leetcode_0031.c  leetcode_0033.c  leetcode_0034.c  leetcode_0035.c  leetcode_0036.c  leetcode_0039.c  leetcode_0040.c  leetcode_0042.c  leetcode_0043.c  (+102 more)
c/lib/: list.h  ring_buf.c
c/misc/: array.c  common.h  compare_str.c  eight_queen.c  graph_1125.c  graph_1127.c  hand_09_02.c  hand_10_01.c  hand_4_1_2.c  heap_20220223.c  list_1117.c  list_1118.c  list_1120.c  list_1126.c  list_20210302.c  practice_maze_0925.c  practice_qsort_0923.c  practice_queue_0916.c  practice_stack_0916.c  practice_tree_0917.c  (+16 more)
c/test-libc/: CMakeLists.txt  Makefile  build.sh  main.c  module.h  test.c  test.h  test_define.c
c/test-libc/array/: array_main.c  test_array.c  test_func_param.c
c/test-libc/file/: file_main.c  file_main.h  test_write.c
c/test-libc/stdio/: stdio_header.h  stdio_main.c  test_printf.c  test_sizeof.c
c/test-libc/stdlib/: stdlib_main.c  test_qsort.c  test_qsort2.c
c/test-libc/string/: all_string_test.c  string_main.c  test_string.h  test_strlen.c
c/test-libc/test_sscanf/: CMakeLists.txt  test_sscanf.c
c/test-libc/test_string/: CMakeLists.txt  test_str_arr.c
c/test-libc/time/: CMakeLists.txt  test_utc.c
c/tests/: CMakeLists.txt  head.h  tcp_client.py  test_atoi.c  test_define.h  test_fifo.c  test_printf_vars.c  test_pthread_wakeup.c  test_tcp_server.c
c/tests/attribute/: CMakeLists.txt  test_alias.c
c/tests/cJSON/: CMakeLists.txt  test_int8.c
c/tests/gcc/: CMakeLists.txt  test_macro.c
c/tests/test_list/: CMakeLists.txt  list.h  test_list.c
c/tests/test_macro/: CMakeLists.txt  test_macro.c
c/tests/test_math/: CMakeLists.txt  test_sin.c
c/tests/test_net/: CMakeLists.txt  test_tcp_server.c  test_udp_server.c
c/tests/test_union/: CMakeLists.txt  union_argv.c
cmake/: CMakeLists.txt  build.sh  include.cmake
cmake/3.5.1/tests/test_link_flags/: CMakeLists.txt
cmake/script/: common.cmake
cmake/test/: test_message.cmake  test_strcmp.cmake
cmake/test/alias_exec/: main.c
cmake/tests/: test_bool.cmake  test_cmp.cmake  test_file.cmake  test_find.cmake  test_foreach.cmake  test_function.cmake  test_if.cmake  test_list.cmake  test_logic.cmake  test_macro.cmake  test_math.cmake  test_message.cmake  test_set.cmake  test_shell.cmake  test_string.cmake
cmake/tests/alias_exec/: CMakeLists.txt
cmake/tests/src/: hello.c  math.c  math.h
cmake/tests/src/include/: info.h  price.h
cmake/tests/test01/: CMakeLists.txt  a.h  b.h  main.c
cmake/tests/test_comp_exec/: CMakeLists.txt
cmake/tests/test_comp_lib/: CMakeLists.txt
cmake/tests/test_configure_file/: config_file.cmake
cmake/tests/test_cross_compile/: CMakeLists.txt
cmake/tests/test_custom/: CMakeLists.txt
cmake/tests/test_file/: CMakeLists.txt
cmake/tests/test_import_config/: CMakeLists.txt  defconfig
cmake/tests/test_include/: CMakeLists.txt  common.cmake
cmake/tests/test_include/cmake/: math.cmake
cmake/used/: test_string.cmake
cmake/used/test_ifdefined/: CMakeLists.txt  autoconf.h
cpp/leetcode/: CMakeLists.txt  common.h  leetcode_0001.cpp  leetcode_0002.cpp  leetcode_0003.cpp  leetcode_0004.cc  leetcode_0005.cpp  leetcode_0006.cc  leetcode_0138.cpp
cpp/tests/: CMakeLists.txt  test_function.cpp  test_string.cpp  test_vector.cc
cpp/tests/template/: CMakeLists.txt  test_explicit.cc  test_function.cc  test_overload.cc  test_struct.cc
cpp/tests/vector/: CMakeLists.txt  test_array.cc
html/: index.html
linux/test-each/: CMakeLists.txt  Makefile  build.sh  test_endian.c  test_get_time.c  test_proc_ioctl.c
linux/test-each/test_container_of/: CMakeLists.txt  test_container_of.c
linux/test-each/test_local_socket/: client.c  server.c
linux/test-each/test_msgp/: CMakeLists.txt  client.c
linux/test-each/tty_debug/: Makefile  get_termios.c  main.c
make/: Makefile  main.c  test01.h
makefile/: CMakeLists.txt  Makefile  main  main.c  test01.c  test01.h
makefile/subdir/: Makefile
makefile/tests/: test_abspath.mk  test_find_lib.mk  test_func.mk  test_log.mk  test_shell.mk
makefile/tests/built-in/: test_filter-out.mk  test_filter.mk  test_foreach.mk  test_patsubst.mk  test_strip.mk
mips/tests/hello/: CMakeLists.txt  build.sh  run.sh
myconfigure/: .bashrc  .gitconfig  .tmux.conf  .vimrc  .zshrc  all-colors.sh  show-256-color.sh  show-color-range.sh
mynote/: .vimrc  arm.md  asm.md  codestyle_c.md  dos.md  function_point.md  gcc.md  git.md  hello-world.md  hexo.md  html.md  javascript.md  leetcode.md  linux_cmd.md  linux_run.md  make.md  makefile.md  markdown.md  new_machine.md  python.md  qemu.md  software_use.md  src_install.md  tmux.md  ucore.md  vba.md  vim.md  vscode.md  windows.md
python/: 02-variable.py  p02_variable.py  test_openpyxl.py
scripts/cjson/tests/test_read/: CMakeLists.txt  test_read.c
scripts/cjson/tests/test_write/: CMakeLists.txt  test_write.c
scripts/md5/tests/test_get_md5/: CMakeLists.txt  test_get_md5.c
shell/: comcmd.sh  mychmod.sh  qemu_run.sh  set_resolution.sh
(+1339 files in other folders)
